# robustack-dl

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml
.github/: dependabot.yml  file_header.txt  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  fuzz.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse_manifest.rs  parse_url.rs
scripts/: check_gpg.sh  check_provenance.sh  validate_jira_msg.py
src/: main.rs
src/cli/: mod.rs
src/client/: mod.rs
src/config/: mod.rs
src/handlers/: archive.rs  audit.rs  download.rs  list.rs  mod.rs  substack.rs
src/integrity/: mod.rs
src/processor/: mod.rs
tests/: cli_integration.rs  nonfunctional.rs  test_validate_jira_msg.py
