[package]
name = "robustack-dl"
version = "1.0.0"
edition = "2024"
rust-version = "1.85"
description = "Own Your Reading. Byte by Byte."
authors = ["CodeBush Collective"]
license = "GPL-3.0-only"

[dependencies]
# Async runtime — only the features we actually use.
tokio = { version = "1.43", features = ["rt-multi-thread", "macros", "io-util"] }

# HTTP client with TLS via rustls (no OpenSSL linkage).
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# CLI framework (derive + env-var support).
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"

# Observability — structured logging with runtime env-filter.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling — thiserror for library, anyhow for binary.
thiserror = "2.0"
anyhow = "1.0"

# Serialization.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Progress bars for multi-threaded downloads.
indicatif = "0.17"

# Layered configuration (CLI > env > TOML).
figment = { version = "0.10", features = ["toml", "env"] }

# Secret masking in memory.
secrecy = { version = "0.10", features = ["serde"] }

# Rate-limiting with jitter.
governor = "0.7"

# Content integrity hashing.
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3.15"
wiremock = "0.6"
